[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/mainmenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/content/ContentFont.tres" type="DynamicFont" id=2]

[node name="Root" type="Node"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 249.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 242.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/TitleContainer"]
margin_right = 196.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Fugitive"

[node name="HelpButton" type="Button" parent="PanelContainer/VBoxContainer/TitleContainer"]
margin_left = 200.0
margin_right = 242.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 242.0
margin_bottom = 98.0
text = "Your Name:"

[node name="PlayerNameTextEdit" type="LineEdit" parent="PanelContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 242.0
margin_bottom = 126.0
clear_button_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 242.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterHost" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 119.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HostGameButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterHost"]
margin_left = 17.0
margin_top = 8.0
margin_right = 101.0
margin_bottom = 28.0
size_flags_vertical = 0
text = "Host Game"

[node name="CenterJoin" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 242.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JoinGameButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterJoin"]
margin_left = 21.0
margin_top = 8.0
margin_right = 98.0
margin_bottom = 28.0
size_flags_vertical = 0
text = "Join Game"

[node name="JoinGameDialog" type="WindowDialog" parent="."]
margin_left = 289.256
margin_top = 411.723
margin_right = 513.256
margin_bottom = 499.723
window_title = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="JoinGameDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Verticle" type="VBoxContainer" parent="JoinGameDialog/CenterContainer"]
margin_left = 46.0
margin_top = 11.0
margin_right = 176.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JoinGameDialog/CenterContainer/Verticle"]
margin_right = 130.0
margin_bottom = 14.0
text = "Server IP"

[node name="ServerIpTextEdit" type="LineEdit" parent="JoinGameDialog/CenterContainer/Verticle"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 42.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 0
clear_button_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="JoinGameDialog/CenterContainer/Verticle"]
margin_top = 46.0
margin_right = 130.0
margin_bottom = 66.0

[node name="ConnectButton" type="Button" parent="JoinGameDialog/CenterContainer/Verticle/HBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
text = "Connect"

[node name="VSeparator" type="VSeparator" parent="JoinGameDialog/CenterContainer/Verticle/HBoxContainer"]
margin_left = 68.0
margin_right = 72.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="JoinGameDialog/CenterContainer/Verticle/HBoxContainer"]
margin_left = 76.0
margin_right = 130.0
margin_bottom = 20.0
text = "Cancel"
[connection signal="pressed" from="PanelContainer/VBoxContainer/TitleContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/PlayerNameTextEdit" to="." method="_on_PlayerNameTextEdit_text_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CenterHost/HostGameButton" to="." method="_on_HostGameButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CenterJoin/JoinGameButton" to="." method="_on_JoinGameButton_pressed"]
[connection signal="pressed" from="JoinGameDialog/CenterContainer/Verticle/HBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="JoinGameDialog/CenterContainer/Verticle/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
